removes data-attributes to enable click event on navigation link

--- a/public/SiteAssets/portal-v0.2.012116/global/directives/header/navigation/navigation.html
+++ b/public/SiteAssets/portal-v0.2.012116/global/directives/header/navigation/navigation.html
@@ -27,7 +27,7 @@
                         <li><a data-ui-sref="documentLibrary" class="nav-link"> View Documents </a></li>
                         <li><a data-ng-click="addDocument()" class="nav-link"> Add Document </a></li>
                     </ul>
-                </li>                            
+                </li>
                 <li class="menu-dropdown mega-menu-dropdown">
                     <a href="" class="uppercase"> Workgroups </a>
                     <ul class="dropdown-menu" style="min-width: ">
@@ -72,7 +72,7 @@
                                     <div class="col-md-6">
                                         <ul class="mega-menu-submenu" style="display:block;">
                                             <li><a data-ui-sref="civilRights">Civil Rights</a></li>
-                                            <li><a data-ui-sref="domesticViolence">Domestic Violence</a></li>                             
+                                            <li><a data-ui-sref="domesticViolence">Domestic Violence</a></li>
                                             <li><a data-ui-sref="HIVAIDS">HIVAIDS</a></li>
                                             <li><a data-ui-sref="peopleDisabilities">People with Disabilities</a></li>
                                             <li><a data-ui-sref="seniors">Seniors</a></li>
@@ -106,12 +106,12 @@
                         <li><a data-ui-sref="forms">Forms</a></li>
                         <li><a data-ui-sref="officeAdmin">Office Administration &amp; Facility Requests</a></li>
                     </ul>
-                </li> 
+                </li>
                 <li class="menu-dropdown mega-menu-dropdown">
-                    <a href="/_layouts/15/start.aspx#/_layouts/15/viewlsts.aspx" class="dropdown-toggle uppercase" data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown">
+                    <a href="/_layouts/15/start.aspx#/_layouts/15/viewlsts.aspx" class="dropdown-toggle uppercase" target="_blank">
                         <i class="fa fa-gear" style="font-size:20px;" tooltip-placement="top" uib-tooltip="Click to go to SharePoint"></i>
                     </a>
-                </li>                         
+                </li>
                 <li class="menu-dropdown mega-menu-dropdown">
                     <a class="dropdown-toggle uppercase" data-ui-sref="howTo" data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown">
                         <i class="fa fa-question-circle" style="font-size:20px;" tooltip-placement="top" uib-tooltip="Click for How To Documents"></i>
