--- a/public/SiteAssets/portal-v0.2.012116/modules/documentLibrary/modals/addDocument.modal.html
+++ b/public/SiteAssets/portal-v0.2.012116/modules/documentLibrary/modals/addDocument.modal.html
@@ -23,7 +23,7 @@
             <tr>
                 <td class="col-md-6"><label>Group: </label><span class="required">*</span></td>
                 <td class="col-md-6">
-                    <select data-chosen="{width:'100%'}" id="groups" ng-model="document.groups"  ng-options="group as group.name for group in document.allGroups" select-change="updateIssues" data-placeholder="&nbsp;&nbsp;Select one or more Groups" multiple class="form-control chosen-select">    
+                    <select data-chosen="{width:'100%'}" id="groups" ng-model="document.groups"  ng-options="group for group in document.allGroups" select-change="updateIssues" data-placeholder="&nbsp;&nbsp;Select one or more Groups" multiple class="form-control chosen-select">    
                     </select>
                 </td>
             </tr>
@@ -54,18 +54,18 @@
                 <td class="col-md-6"><input type="text" data-ng-model="document.fileName" data-ng-required="true" class="form-control" readonly /></td>
             </tr>
             <tr ng-if="document.multiples" ng-hide="isUpdating">
-                <td class="col-md-6"><label>Drop Files:</label>                      
+                <td class="col-md-6"><label>Drop Files:</label>
                     <ul>
                         <li data-ng-repeat="f in document.files" style="font:smaller">{{f.name}}</li>
-                    </ul>                            
+                    </ul>
                 </td>
                 <td class="col-md-6">
                     <div>
-                        <div data-ngf-drop="true" data-ngf-select="true" data-ng-model="document.files" 
+                        <div data-ngf-drop="true" data-ngf-select="true" data-ng-model="document.files"
                             data-ngf-drag-over-class="dragover" data-ngf-multiple="true" data-ngf-allow-dir="true" data-ngf-keep="true"
                             data-accept="image/*,application/*" class="drop-box" style="cursor:pointer;">Drop files here or click to browse and add files</div>
                         <div data-ngf-no-file-drop="false">File Drag/Drop is not supported for this browser</div>
-                        <div data-ng-if="files">Files:</div>                            
+                        <div data-ng-if="files">Files:</div>
                     </div>
                 </td>
             </tr>
@@ -81,5 +81,3 @@
         <button class="btn btn-success" data-ng-click="modal.save()" ng-show="isUpdating" ng-disabled="false">Save</button>
     </div>
 </div>
-
-
